[UI/UX] Fixed the forced top margin and wrapping on PRE blocks.  When you want e-mail body formatting you need to set <pre class="emailbody"> now.

--- a/features/cerberusweb.core/resources/css/cerberus.css
+++ b/features/cerberusweb.core/resources/css/cerberus.css
@@ -42,13 +42,14 @@ form {
 }
 
 /* See: http://www.longren.org/2006/09/27/wrapping-text-inside-pre-tags/ */
-pre {
+pre.emailbody {
 	white-space: pre-wrap; /* css-3 */
 	white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
 	white-space: -pre-wrap; /* Opera 4-6 */
 	white-space: -o-pre-wrap; /* Opera 7 */
 	word-wrap: break-word; /* Internet Explorer 5.5+ */
 	_white-space: pre; /* IE only hack to re-specify in addition to word-wrap */
+	margin:0px;
 }
 
 button {
